# thermounits

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: README.md  architecture.md  cli.md  development.md  installation.md  models-and-assumptions.md  python-api.md
tests/: __init__.py  test_thermounits.py
thermounits/: __init__.py
thermounits/cli/: __init__.py  main.py
thermounits/fluids/: __init__.py  air.py  fluid.py  water.py
thermounits/thermo/: __init__.py  functions.py  phase.py  state.py
thermounits/units/: __init__.py  dimensions.py  quantity.py  registry.py
