[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermounits"
version = "0.1.0"
description = "Unit-safe thermodynamics and heat transfer computations"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ThermoUnits Contributors" }
]
keywords = [
    "thermodynamics", "heat-transfer", "unit-conversion",
    "engineering", "enthalpy", "entropy", "gibbs", "steam-tables",
    "isentropic", "carnot", "cli", "physics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.scripts]
thermounits = "thermounits.cli.main:main"

[project.urls]
Homepage    = "https://github.com/DeepcometAI/thermounits"
Repository  = "https://github.com/DeepcometAI/thermounits"
Issues      = "https://github.com/DeepcometAI/thermounits/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["thermounits*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.mypy]
python_version       = "3.9"
strict               = false
ignore_missing_imports = true
